RESOLVED FIXED306554
Iframe history not restored on back navigation with BFCache off.
https://bugs.webkit.org/show_bug.cgi?id=306554
Summary Iframe history not restored on back navigation with BFCache off.
Basuke Suzuki
Reported 2026-01-29 10:56:11 PST
When navigating back through browser history with iframes (BFCache OFF), the iframe's content is not restored to its previous state. The browser's loading indicator continues spinning indefinitely. ### Reproduction Steps 1. Navigate to `index.html` 2. Click link → navigate to `bf-navigation/index.html` (iframe shows `page1.html`) 3. Inside iframe, click link → navigate to `page2.html` 4. Click "Home" link → navigate back to `index.html` 5. Browser back button → returns to `bf-navigation/index.html` (iframe shows `page2.html`) ✓ 6. Browser back button again → **BUG:** - Expected: iframe shows `page1.html` - Actual: iframe remains on `page2.html` + loading indicator never completes
Attachments
Basuke Suzuki
Comment 1 2026-01-30 11:33:54 PST
Basuke Suzuki
Comment 2 2026-01-30 11:38:35 PST
EWS
Comment 3 2026-01-31 11:16:32 PST
Committed 306580@main (667fcac3eb76): <https://commits.webkit.org/306580@main> Reviewed commits have been landed. Closing PR #57571 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.