Source/WebKit/Shared/WebBackForwardListItem.cpp
@@ -217,4 +217,12 @@ String WebBackForwardListItem::loggingString()
     return m_mainFrameItem->loggingString();
 }
 
+void WebBackForwardListItem::updateFrameID(FrameIdentifier oldFrameID, FrameIdentifier newFrameID)
+{
+    if (RefPtr frameItem = m_mainFrameItem->childItemForFrameID(oldFrameID))
+        frameItem->updateFrameID(newFrameID);
+    if (m_navigatedFrameID && *m_navigatedFrameID == oldFrameID)
+        m_navigatedFrameID = newFrameID;
+}
+
 } // namespace WebKit
